Archive2/80/c25fdd0d4f2930/output
main.cpp:14:8: error: expected type-specifier
     -> std::enable_if< std::is_same< T, X >::value >::type
        ^
main.cpp:14:8: error: expected initializer
